fix(Saved): style gap

--- a/src/pages/Saved/Saved.module.scss
+++ b/src/pages/Saved/Saved.module.scss
@@ -4,5 +4,4 @@
   flex-direction: column;
   margin: 2rem 0rem;
   width: 60%;
-  gap: 2rem
 }
